# bars-engine

./: .bars-strand.yml  .bars-strand.yml.example  .cursorrules  .env.example  .gitattributes  .gitignore  .prisma_hash  .vercelignore  AGENTS.md  ARCHITECTURE.md  BARS_STRAND_ANNOUNCEMENT.md  BARS_STRAND_DEPLOYMENT_CHECKLIST.md  BARS_STRAND_QUICK_REFERENCE.md  BARS_STRAND_REFINEMENT_SUMMARY.md  CLAUDE.md  CLAUDE.md.bak  Dockerfile  FEATURE_REQUEST.md  FOUNDATIONS.md  GM_GAP_ANALYSIS_RPG_ZINE_BAR_MATURITY.md  GUI_ASSET_INTEGRATION.md  IMPLEMENTATION_PLAYBOOK.md  IMPLEMENTATION_SUMMARY.md  MVP_COMPLETION_REPORT.md  MVP_SHIP_PLAN.md  Makefile  NOTES.md  README.md  RUNBOOK.md  SEED_IMPLEMENT_BARS_STRAND_SYSTEM.yaml  SEED_deep_linking_provenance_system.yaml  SPEC-404-fix.md  SPEC-TS-MODULE-FAIL-001.md  SPEC-bar-asset-pipeline-002.md  SPEC.md  SUMMARY.md  TEST-GUIDE-bar-asset-pipeline-002.md  TESTING_GUIDE.md  UI_COVENANT.md  _speccit.txt  (+26 more)
.claude/: settings.json
.cursor/: mcp.json
backend/: .env.example  .gitignore  DEPLOY.md  Dockerfile  Makefile  docker-compose.yml  pyproject.toml  railway.json  render.yaml  requirements.txt
backend/app/: auth.py  config.py  database.py  main.py  mcp_health.py  mcp_server.py  shadow_name_grammar.py
backend/app/agents/: __init__.py  _deps.py  _iching.py  _instructions.py  _lore.py  _schemas.py  _tools.py  architect.py  challenger.py  diplomat.py  mapping_proposer.py  mind.py  regent.py  sage.py  shaman.py
backend/app/models/: __init__.py  bar_clash.py  base.py  campaign.py  clash_events.py  deck.py  economy.py  game.py  identity.py  knowledge.py  memory.py  memory_events.py  narrative.py  player.py  quest.py  system.py
backend/app/orientation_quest/: __init__.py  checkpoint.py  models.py
backend/app/routes/: agents.py  health.py  strands.py
backend/app/schemas/: agents.py
backend/app/services/: memory_service.py
backend/app/sprite_gen/: builder.py  tokens.py
backend/app/sprites/: audit.py  routes.py  schemas.py  validation.py  validation_test.py  worker.py
backend/app/strand/: __init__.py  creator.py  runner.py  runtime_guards.py  schemas.py
backend/public/sprites/pending/portrait/argyra-danger-walker/: _job.json
backend/public/sprites/pending/portrait/bold-heart-the-merchant/: _job.json
backend/public/sprites/pending/portrait/iron-flame-the-warden/: _job.json
backend/tests/: test_bar_clash_model.py  test_health.py  test_mcp_health.py  test_memory_node.py  test_shadow_name_grammar.py  test_strand_creator.py  test_strands_runtime.py
backend/tests/test_agents/: conftest.py  test_architect.py  test_challenger.py  test_diplomat.py  test_mapping_proposer.py  test_mind.py  test_regent.py  test_sage.py  test_shaman.py
backend/tests/test_orientation_quest/: test_checkpoint.py
(+5694 files in other folders)
