[project]
name = "bars-engine-backend"
version = "0.1.0"
description = "BARs Engine Python Backend — FastAPI + Pydantic AI"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg",
    "pydantic>=2.10",
    "pydantic-ai>=0.1,<2.0",
    "pydantic-settings",
    "logfire[pydantic-ai]",
    "httpx",
    "python-multipart",
    "cuid2",
    "psycopg2-binary>=2.9.11",
    "fastmcp>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "ruff",
    "mypy",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
