[project]
name = "bars-engine-backend"
version = "0.1.0"
description = "BARs Engine Python Backend — FastAPI + Pydantic AI"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg",
    "pydantic>=2.10",
    "pydantic-ai>=0.1,<2.0",
    "pydantic-settings",
    "logfire[pydantic-ai]",
    "httpx",
    "python-multipart",
    "cuid2",
    "psycopg2-binary>=2.9.11",
    "fastmcp>=2.0",
    "faster-whisper>=1.0",
    "pydub>=0.25",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "ruff",
    "mypy",
]

# On Intel Mac, onnxruntime>=1.24 has no x86_64 wheels; pin to 1.23.x
[tool.uv]
override-dependencies = [
    "onnxruntime>=1.14,<1.24",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 140
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
# SQLAlchemy relationship annotations reference models defined later or in other modules;
# runtime uses from __future__ import annotations; pyflakes still flags F821 without TYPE_CHECKING imports everywhere.
# Pydantic API schemas intentionally use camelCase field names matching JSON contracts.
# Long SQLAlchemy column definitions and module docstrings; E501 adds churn without readability wins.
# Agent instruction blocks are prose; line breaks would harm copy-paste of prompts.
[tool.ruff.lint.per-file-ignores]
"app/models/**/*.py" = ["F821", "E501"]
"app/agents/_instructions.py" = ["E501"]
"app/schemas/agents.py" = ["N815"]
"app/sprites/schemas.py" = ["N815"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
